--- a/Practice Project1/style.css
+++ b/Practice Project1/style.css
@@ -2,33 +2,32 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
-body{
+body, html{
     width: 100%;
-    /* height: 100vh; */
+    height: 100%;
     background: #c2c1c1;
-    display: flex;
-    flex-direction: column;
-    place-items: center;
+    overflow-x: hidden;
 }
 #box-1{
     background-color: #F6F0E2;
-    width: 60% ;
-    height: 80vh;
-    display: flex;
-    flex-direction: column;
-    place-content: center;
-    place-items: center;
+   max-width: 80vw;
+   min-height: 90vh;
+   place-content: center;
+   place-items: center;
     font-family: "Bebas Neue", sans-serif;
     position: relative;
     box-shadow: 2px 2px 20px #212121;
     margin-block: 20px;
+    margin-inline: 20px;
 }
 #box-1 #heading{
     font-weight: 700;
     font-style: normal;
     font-size:4rem;
     margin-block: 10px;
+    text-align: center;
     letter-spacing: 5px;
 }
 #year{
@@ -41,37 +40,45 @@ body{
     gap: 10px;
 }
 #year #line{
-    width: 170px;
+    width: 15vw;
     height: 1.5px;
     background-color: black;
 }
 .icon{
+    display: flex;
+    flex-direction: column;
     color: grey;
-    width: 20%;
+    /* width: 20%; */
     position: absolute;
     top: 30%;
-    left: 20%;   
+    left: 30%;   
 }
+.icon1, .icon2, .icon-3, .icon-4{
+    display: flex;
+    flex-direction: row;
+}
+
 .icon i{
     margin-inline: 4px;
 }
 #box-2{
     flex-direction: row;
     background-color: #F6F0E2;
-    width: 60% ;
-    height: 80vh;
+    max-width: 80vw ;
+    min-height: 80vh;
     font-family: "Bebas Neue", sans-serif;
     display: flex;
     box-shadow: 2px 2px 20px #212121;
     margin-block: 20px;
-    justify-content: space-between;
+    justify-content: space-evenly;
     position: relative;
+    margin-inline: 20px;
 }
 
 .container1{
     background-color: white;
-    height: 18rem;
-    width: 35vw;
+    width: 20vw;
+    height: 60vh;
     border-radius: 40px;
     display: flex;
     gap: 2px;
@@ -92,7 +99,7 @@ body{
     background-image: url("https://images.unsplash.com/photo-1743746185924-7d4243114502?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-repeat: none;
     width: 15vw;
-    height: 14rem;
+    height: 45vh;
     background-size: cover;
     
 }
@@ -115,6 +122,7 @@ body{
     margin-top: 60px;
     display: flex;
     flex-direction: column;
+justify-content: center;
 }
 .container2 .about{
     font-family: "Bebas Neue", sans-serif;
@@ -125,7 +133,7 @@ body{
     font-family:    Verdana, sans-serif;
     margin-block: 15px;
     font-weight: 300;
-    width: 70%;
+    max-width: 70%;
 }
 b{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -134,14 +142,14 @@ b{
 .logo{
     display: flex;
     justify-content: space-between;
-    width: 60%;
+    max-width: 60%;
     margin-top: 10px;
     margin-left: 5px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .icon-2{
     color: grey;
-    width: 20%;
+    max-width: 20%;
     position: absolute;
     right: 15%;
     top: 30%;
@@ -273,4 +281,106 @@ b{
     bottom: 31%;
     left: 0%;
     transform: rotate(-10deg) scaleX(1.2);
+}
+
+*::selection{
+    background-color: burlywood;
+    color: #fff;
+}
+body::-webkit-scrollbar{
+    display: block;
+    width: 8px;
+    background-color: rgb(145, 128, 52);
+}
+body::-webkit-scrollbar-thumb{
+    display: block;
+    background-color: rgb(82, 56, 3);
+    border-radius: 1vw;
+    cursor: grab;
+}
+/* responsiveness */
+
+@media(max-width:480px){
+    #box-1{
+        min-height: 50vh;
+    }
+    #box-1 #heading{
+        font-size: 1.5rem;
+    }
+    #year{
+        font-size: 8px;
+    }
+    .icon, .icon-3, .icon-4, i{
+        font-size: 10px;
+        margin-inline: 1px;
+    }
+    .icon{
+        left: 5%;
+    }
+    .stroke{
+        width: 20px;
+    }
+    #box-2{
+        display: flex;
+        flex-direction: column;
+        padding-top: 20px;
+    }
+    .container2 .about{
+        font-size: 1.5rem;
+        text-align: center;
+    }
+    .intro{
+        font-size: 10px;
+        text-align: center;
+    }
+    .container2{
+        place-items: center;
+    }
+    .icon-2{
+        top:47% ;
+        left: 45%;
+        
+    }
+    b{
+        font-size: 10px;
+    }
+    
+    .container1{
+       height: 35vh;  
+       width: 45vw;
+    }
+    .image{
+        width: 45vw;
+        height: 27vh;
+    }
+    .logo{
+        font-size: 12px;
+        padding-bottom: 10px;
+        flex-direction: column;
+    }
+}
+@media(max-width: 768px){
+    #box-2{
+        flex-direction: column;
+        text-align: center;
+        padding-block: 20px;
+        
+    }
+    .container2{
+        align-items: center;
+    }
+    .logo{
+        align-items: center;
+    }
+    .container1{
+        width: 40vw;
+        height: 65vh;
+    }
+    .image{
+        width: 40vw;
+        height: 50vh;
+    }
+    .icon-2{
+        top: 55%;
+    }
 }
