--- a/Portfolio website/style.css
+++ b/Portfolio website/style.css
@@ -209,7 +209,7 @@ ul button {
   color: var(--text-color);
 }
 .cont-1 {
-  max-width: 20%;
+  max-width: 40%;
 }
 
 .square {
@@ -354,4 +354,185 @@ ul button {
     width: 40vw;
     padding: 10px;
     text-align: center;
+}
+@media (max-width: 468px){
+  .logo p{
+    font-size: 1rem;
+  }
+  nav,
+ul{
+  flex-direction: column;
+}
+.logo p,
+.education, #bloom {
+  font-size: 1rem;
+}
+.portfolio-txt,
+#education .data .resume {
+  font-size: 3rem; 
+}
+.image{
+  width: 13rem;
+  height: 15rem;
+  left: 5%;
+}
+.SM{
+  top: 50%;
+  left: 70%;
+  width: 10rem;
+  font-size: 10px;
+
+}
+.interest p{
+  max-width: 70vw;
+}
+.interest{
+  min-height: 10vh;
+}
+.scroll-down{
+  left: 35%;
+}
+.cont-1 .greetings{
+  font-size: 2rem;
+}
+.intro-section{
+  display: flex;
+flex-direction: column;
+justify-content: space-between;
+place-items: center;
+min-height: 80vh;
+}
+.square{
+  min-height: 29vh;
+  top: 40%;
+}
+.info2 {
+  left: 75%;
+}
+.info1 {
+  left: -20%;
+  top: 30%;
+}
+.square img{
+  top: 0%;
+}
+.contact{
+  min-height: 10vh;
+}
+.circle{
+  max-width: 200px;
+  min-height: 200px;
+}
+#education{
+  flex-direction: column-reverse;
+  gap: 20px;
+}
+.data .resume{
+  left: 50%;
+}
+.data .resume #tech{
+  font-size: 1.5rem;
+}
+.education{
+  font-size: 2rem;
+}
+.skills{
+flex-direction: column;
+width: 100%;
+font-size: 20px;
+}
+#whyMe p{
+  width: 60vw;
+}
+#whyMe{
+  place-items: center;
+}
+}
+@media(max-width:768px){
+  .logo p{
+    font-size: 1.5rem;
+  }
+  .cont-1{
+    width: 100%;
+  }
+  #LI{
+    font-size: 10px;
+  }
+.portfolio-txt,
+#education .data .resume {
+  font-size: 3rem; 
+}
+.image{
+  width: 13rem;
+  height: 15rem;
+  left: 5%;
+}
+.SM{
+  top: 50%;
+  left: 60%;
+}
+#education{
+  flex-direction: row-reverse;
+  gap: 20px;
+
+}
+.interest p{
+  max-width: 30vw;
+}
+.interest{
+  min-height: 10vh;
+}
+.scroll-down{
+  left: 45%;
+  top: 50%;
+}
+.intro-section{
+flex-direction: column;
+}
+.square{
+  min-height: 29vh;
+  top: 50%;
+  right: 20px;
+}
+.info2 {
+  left: 75%;
+}
+.info1 {
+  left: -20%;
+  top: 30%;
+}
+.square img{
+  top: 0%;
+}
+.contact{
+  min-height: 10vh;
+}
+.circle{
+  max-width: 200px;
+  min-height: 200px;
+}
+.data .resume{
+  left: 60%;
+  top: -15%;
+}
+.data .resume #tech{
+  font-size: 1.5rem;
+}
+.education{
+  font-size: 2rem;
+}
+.skills{
+flex-direction: column;
+width: 100%;
+font-size: 10px;
+}
+.time-line p {
+  font-size: 10px;
+}
+#whyMe p{
+  width: 60vw;
+}
+#whyMe{
+  place-items: center;
+}
 }
